# ultimate-nag52-config-app

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/diag/: calibration.rs  device_modes.rs  flash.rs  ident.rs  memory.rs  mod.rs  module_settings_flash_store.rs  nvs.rs  settings.rs
backend/src/hw/: firmware.rs  mod.rs  usb.rs  usb_scanner.rs
config_app/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
config_app/src/: App.vue  ghapi.rs  main.rs  window.rs
config_app/src-tauri/: Cargo.toml  tauri.conf.json
config_app/src-tauri/icons/: icon.icns
config_app/src-tauri/src/: basic_structs.rs  main.rs
config_app/src/components/: Greet.vue
config_app/src/components/map_editor/: Graph3D.vue  map_editor.vue
config_app/src/plot_backend/: color.rs  mod.rs
config_app/src/ui/: crashanalyzer.rs  firmware_update.rs  io_maipulator.rs  launcher.rs  main.rs  mod.rs  nvs_editor.rs  settings_ui_gen.rs  status_bar.rs  updater.rs
config_app/src/ui/configuration/: cfg_structs.rs  egs_config.rs  mod.rs
config_app/src/ui/diagnostics/: mod.rs  rli.rs  solenoids.rs
config_app/src/ui/map_editor/: help_view.rs  map_list.rs  map_widget.rs  mod.rs
config_app/src/ui/param_editor/: mod.rs
config_app/src/ui/routine_tests/: adaptation.rs  atf_temp_cal.rs  canlogger.rs  mod.rs  slave.rs  solenoid_test.rs  tcc_control.rs
config_app/src/ui/widgets/: mod.rs  number_input.rs  range_display.rs
config_app_macros/: Cargo.toml
config_app_macros/src/: lib.rs
