[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecu_diagnostics="0.96.0"
#ecu_diagnostics = { git = "https://github.com/rnd-ash/ecu_diagnostics", branch="diag_server_unified" }
#ecu_diagnostics = { path = "../../ecu_diagnostics" }
serial-rs = "0.2.1"
packed_struct="0.10.0"
static_assertions = "1.1.0"
serde_yaml="0.9.21"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_derive = "1.0.197"
chrono="0.4.24"
strum = "0.26.2"
strum_macros = "0.26.2"
serde_json = "1.0.97"
miette="7.2.0"
bitflags="2.4.0"
flate2="1.0"
