[package]
name = "config_app"
version = "0.1.8"
edition = "2021"
resolver = "2"
description = "Ultimate-NAG52 config app"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "config_app"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1.0.89" }
serde = { version = "1.0.148", features = ["derive"] }
backend={path="../backend/"}
config_app_macros={path="../config_app_macros/"}
image = "0.24.5"
rfd="0.14.0"
pollster = "0.3.0"
eframe = {version="0.26.2", features=["wgpu", "default_fonts"]}
egui_extras = {default-features=false, version="0.26.2", features=["image"]}
static_assertions = "1.1.0"
env_logger="0.11.2"
egui-toast="0.12.1"
chrono = "0.4.23"
nom="7.1.1"
plotters-backend="0.3.4"
plotters={version="0.3.4", default_features = false, features=["surface_series"]}
packed_struct="0.10.0"
ehttp="0.5.0"
octocrab = {git = "https://github.com/XAMPPRocky/octocrab", commit="7061b48c9bb799cb7effa0ecb8fd366a23f13de2"}
tokio = { version = "1.17.0", features = ["full"] }
zip="0.6.6"
curl = "0.4.43"
egui_plot = "0.26.2"
serde_derive = "1.0.197"
lz4-compression = "0.7.0"
bincode = "1.3.3"

[patch.crates-io]
winit = { git = "https://github.com/PolyMeilex/winit ", branch = "master" }

# For OSX
[package.metadata.bundle]
name = "Ultimate-NAG52-Config-App"
identifier = "com.rndash.un52configapp"
short_description = "Ultimate-NAG52 configuration suite"
osx_url_schemes = ["com.rndash.un52configapp"]
