[package]
name = "config_app_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
base64="0.21.0"
syn = { version = "2.0.15", default-features = false, features = ["parsing", "proc-macro", "full"] }
quote = "1.0.26"